--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -23,7 +23,9 @@
     --muted-text-color: #f5f5f5; /* Muted text color for dark mode */
     --button-text-color: #ffffff; /* Button text color */
 }
-
+.dark-mode .form-text {
+    color: #ffffff !important;
+}
 /* Apply Theme */
 body {
     background-color: var(--background-color);
@@ -73,6 +75,7 @@ button:hover,
     background-color: #333 !important;
     color: #fff !important;
 }
+
 
 body {
     opacity: 0;
