--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -34,10 +34,24 @@
     --button-hover-bg: #e64a19;
     --success-color: #10b981;
 }
+.dark-mode .form-text {
+    color: #ffffff !important;
+}
+
+.dark-mode .bg-light {
+    background-color: #333 !important;
+    color: #fff !important;
+}
+.dark-mode .reading-time {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
 /* Apply Theme */
 body {
     background-color: var(--background-color);
     color: var(--text-color);
+    opacity: 0;
+    animation: fadeIn 1s forwards;
 }
 
 header {
@@ -207,6 +221,7 @@ header {
     background: linear-gradient(to right, rgba(var(--primary-color-rgb), 0.05), rgba(var(--primary-color-dark-rgb), 0.05));
     border-radius: 1rem;
 }
+
 
 /* Headings */
 h1, h2, h3, h4, h6 {
@@ -527,7 +542,7 @@ footer ul li {
 
 footer ul li a {
     color: #fff;
-    text-decoration: none !important; 
+    text-decoration: none;
     transition: color 0.3s ease, background-color 0.3s ease, padding-left 0.2s ease;
     padding-left: 0;
 }
@@ -606,6 +621,38 @@ footer .fab {
     background-color: #ff9500d0 !important; 
 }
 
+/* When scrolled, change to dark */
+#navbar.scrolled {
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(10px);
+}
+
+#back-to-top-btn {
+    position: fixed;
+    bottom: 40px;
+    right: 30px;
+    z-index: 999;
+    display: none;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    padding: 10px 14px;
+    font-size: 18px;
+    cursor: pointer;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+}
+#back-to-top-btn.show {
+    display: inline-block;
+}
+#back-to-top-btn:hover {
+    background-color: #0056b3;
+}
+#navbar {
+    background-color: rgb(222 204 174);
+    transition: all 0.5s ease-in-out;
+}
 #navbar .nav-link,
 #navbar .navbar-brand,
 #navbar .nav-item > a {
@@ -676,27 +723,13 @@ footer .fab {
     border-color: var(--button-hover-bg);
     color: #fff;
 }
-#back-to-top-btn {
-    position: fixed;
-    bottom: 40px;
-    right: 30px;
-    z-index: 999;
-    display: none;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    padding: 10px 14px;
-    font-size: 18px;
-    cursor: pointer;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-    transition: opacity 0.3s ease, transform 0.3s ease;
-}
-#back-to-top-btn.show {
-    display: inline-block;
-}
-#back-to-top-btn:hover {
-    background-color: #0056b3;
-}
 
+
+.dark-mode .form-text {
+    color: #ffffff !important;
+}
+.card {
+    background-color: var(--card-bg);
+    color: var(--text-color);
+}
 }
